<resources>
    <string name="app_name">Login Application With Fragment</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_management_system">User Management System</string>
    <string name="enter_the_email_id">Enter The Email ID</string>
    <string name="enter_the_contact_no">Enter The Contact No</string>
    <string name="enter_the_full_name">Enter The Full Name</string>
    <string name="enter_the_user_name">Enter The User Name</string>
    <string name="enter_the_password">Enter The Password</string>
    <string name="welcome_user">Welcome User</string>
</resources>