<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/registrationcolor"
    tools:context=".RegistrationFragment">
    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/enter_the_full_name"
        android:inputType="textPersonName"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColorHint="#4E342E" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:hint="@string/enter_the_user_name"
        android:inputType="textPersonName"
        android:textColorHint="#4E342E"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/enter_the_password"
        android:inputType="textPassword"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/txtContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="210dp"
        android:ems="10"
        android:hint="@string/enter_the_contact_no"
        android:inputType="phone"
        android:textColorHint="#4E342E"
        android:minWidth="48dp"
        android:minHeight="48dp" />
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="260dp"
        android:ems="10"
        android:hint="@string/enter_the_email_id"
        android:inputType="textEmailAddress"
        android:textColorHint="#4E342E"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:backgroundTint="@color/cardview_light_background"
        tools:ignore="DuplicateSpeakableTextCheck" />
</RelativeLayout>