<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logincolor"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/enter_the_user_name"
        android:inputType="textPersonName"
        android:textColorHint="#4E342E"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="@string/enter_the_password"
        android:inputType="textPassword"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        tools:ignore="DuplicateClickableBoundsCheck" />


    <Button
        android:id="@+id/btnLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:backgroundTint="@color/cardview_light_background"
        tools:ignore="DuplicateSpeakableTextCheck" />

</RelativeLayout>